--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
-.w3-content w3-display-container{
+.styley{
 display: flex;
 flex-direction: column;}
 
