--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,8 @@ footer, header, hgroup, menu, nav, section {
 
 .styley{
 display: flex;
-flex-direction: column;}
+flex-direction: column;
+justify-content: space-between}
 
 body {
 	line-height: 1;
