--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@ footer, header, hgroup, menu, nav, section {
 .styley{
 display: flex;
 flex-direction: column;
+height: 1500px;
 justify-content: space-between}
 
 body {
